--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 script:
-  - docker build -t mannydesigns/node
+  - docker build -t mannydesigns/node . 
   - docker images mannydesigns/node
 
 before_deploy:
