--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_deploy:
 
 deploy:
   provider: script
-  script: docker push mannydesigns/node
+  script: docker push engelbrod/node
   on:
     branch: master
 
